<resources>
    <string name="app_name">Annuaire Professionnel</string>
    <string name="add_title">Add Contact :</string>
    <string name="Edit_title">Edit Contact :</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="refresh">Refresh</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="job">Job :</string>
    <string name="firstname">FirstName :</string>
    <string name="lastname">LastName :</string>
    <string name="home_page">Home Page</string>
    <string name="add_text">Add text</string>
    <string name="add_contact">Add Contact</string>
</resources>